[gd_scene load_steps=15 format=2]

[ext_resource path="res://main/game/world/world.gd" type="Script" id=1]
[ext_resource path="res://entities/entity_player/entity_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://libs/gt_collision_polygon_2d/gt_collision_polygon_2d.gd" type="Script" id=3]
[ext_resource path="res://libs/gt_random_point_zone_2d/gt_random_point_zone_2d.gd" type="Script" id=4]
[ext_resource path="res://entities/entity_enemy_follower/entity_enemy_follower.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/entity_spawner/nst_manager/nst_manager.tscn" type="PackedScene" id=6]
[ext_resource path="res://libs/gt_screen_shake_2d/gt_screen_shake_2d.gd" type="Script" id=7]
[ext_resource path="res://libs/gt_pattern_label/gt_pattern_label.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/diffusion-bold-s32-o2.tres" type="DynamicFont" id=9]
[ext_resource path="res://libs/gt_time/gt_time.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("black_fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game_over_label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("current_wave_label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "game_over"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("black_fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.509804 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game_over_label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("current_wave_label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 640, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 360 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
min_distance_from_player = 500

[node name="colored_background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0.188235, 0.231373, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="root" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="black_fade" type="ColorRect" parent="HUD/root"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="current_wave_label" type="Label" parent="HUD/root"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 0.780392, 1 )
text = "Wave 1"
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
pattern_text = "Wave %s"

[node name="game_over_label" type="Label" parent="HUD/root"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.5
margin_top = -42.5
margin_right = 199.5
margin_bottom = 42.5
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 0.780392, 1 )
text = "Game Over
Press R to play again"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/root"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/game_over = SubResource( 2 )

[node name="WaveManager" parent="." instance=ExtResource( 6 )]
rotation = -0.00109569
enemy_properties = {
"speed": [ 1.0, 1.1, 1.25, 1.35, 1.5, 1.5, 1.55, 1.6, 1.6, 1.7, 1.7, 1.8, 1.8, 1.9, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5 ]
}
wave_properties = {
"replacement_time": [ 1.0, 1.0, 0.8, 0.7, 0.6, 0.6, 0.6, 0.5, 0.4, 0.4, 0.3, 0.3, 0.2, 0.2, 0.15, 0.15, 0.1, 0.1, 0.05, 0.05 ],
"screen_enemies": [ 2, 3, 3, 4, 4, 5, 6, 6, 7, 7, 8, 8, 9, 9, 10, 10, 11, 11, 12, 12 ],
"time_between_waves": [ 3.0 ],
"wave_enemies": [ 9, 12, 12, 15, 15, 15, 15, 18, 18, 21, 21, 24, 24, 27, 27, 30, 30, 33, 33, 33 ]
}
max_waves = 100

[node name="EntitySpawner" parent="WaveManager" index="1"]
entity_template = ExtResource( 5 )

[node name="EnemySpawnZone" type="Node2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="CollisionShape2D" parent="EnemySpawnZone"]
position = Vector2( 640, -40 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="CollisionShape2D" parent="EnemySpawnZone"]
position = Vector2( 640, 760 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="3" type="CollisionShape2D" parent="EnemySpawnZone"]
position = Vector2( -40, 360 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="4" type="CollisionShape2D" parent="EnemySpawnZone"]
position = Vector2( 1320, 360 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timers" type="Node" parent="."]

[node name="GameStartTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="TimeManager" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Terrain" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="CollisionPolygon2D" parent="Terrain"]
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, -80, 0, -80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
graphics_color = Color( 0, 0.188235, 0.231373, 1 )

[node name="2" type="CollisionPolygon2D" parent="Terrain"]
polygon = PoolVector2Array( -80, 0, 0, 0, 0, 720, -80, 720 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
graphics_color = Color( 0, 0.188235, 0.231373, 1 )

[node name="3" type="CollisionPolygon2D" parent="Terrain"]
polygon = PoolVector2Array( 1280, 0, 1360, 0, 1360, 720, 1280, 720 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
graphics_color = Color( 0, 0.188235, 0.231373, 1 )

[node name="4" type="CollisionPolygon2D" parent="Terrain"]
polygon = PoolVector2Array( 0, 720, 1280, 720, 1280, 800, 0, 800 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
graphics_color = Color( 0, 0.188235, 0.231373, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720
editor_draw_limits = true
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenShake" type="Node" parent="Camera"]
script = ExtResource( 7 )
camera_path = NodePath("..")

[connection signal="ready" from="." to="Timers/GameStartTimer" method="start"]
[connection signal="spawned_enemy" from="." to="WaveManager/EntitySpawner" method="spawn_with_info"]
[connection signal="enemy_died" from="WaveManager" to="TimeManager" method="slow_time" binds= [ 0.1, 0.2 ]]
[connection signal="spawned_enemy" from="WaveManager" to="." method="_on_WaveManager_spawned_enemy"]
[connection signal="updated_wave" from="WaveManager" to="HUD/root/current_wave_label" method="apply_text_simple"]
[connection signal="timeout" from="Timers/GameStartTimer" to="WaveManager" method="start"]
[connection signal="boomerang_caused_damage" from="Player" to="TimeManager" method="slow_time" binds= [ 0.2, 0.1 ]]
[connection signal="died" from="Player" to="HUD/root/AnimationPlayer" method="play" binds= [ "game_over" ]]
[connection signal="died" from="Player" to="TimeManager" method="slow_time" binds= [ 0.1, 0.5 ]]
[connection signal="hurt" from="Player" to="Camera/ScreenShake" method="shake_simple" binds= [ 16.0, 0.5, 0.05 ]]

[editable path="WaveManager"]
