[gd_scene load_steps=12 format=2]

[ext_resource path="res://menus/screens/screen_empty.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/transitions/transition_fade.tscn" type="PackedScene" id=2]
[ext_resource path="res://libs/gt_menus/menus/__gt_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/screens/screen_game_paused.tscn" type="PackedScene" id=4]
[ext_resource path="res://libs/gt_state_machine/__gt_state.gd" type="Script" id=5]
[ext_resource path="res://menus/menus/menu_ingame/states/screen_empty.gd" type="Script" id=6]
[ext_resource path="res://libs/gt_input_controller/actions/__gt_input_action.gd" type="Script" id=7]
[ext_resource path="res://libs/gt_input_controller/controllers/gt_device_controller.gd" type="Script" id=8]
[ext_resource path="res://main/application_manager.gd" type="Script" id=9]
[ext_resource path="res://menus/menus/menu_ingame/menu_ingame.gd" type="Script" id=10]
[ext_resource path="res://libs/gt_time/gt_time.gd" type="Script" id=11]

[node name="menu_ingame" instance=ExtResource( 3 )]
pause_mode = 2
script = ExtResource( 10 )

[node name="SystemController" type="Node" parent="." index="0"]
script = ExtResource( 8 )

[node name="sys_escape" type="Node" parent="SystemController" index="0"]
script = ExtResource( 7 )
action = "sys_escape"

[node name="Screens" parent="." index="1"]
layer = 2

[node name="screen_empty" parent="Screens" index="0" instance=ExtResource( 1 )]

[node name="transition_fade" parent="Screens/screen_empty" index="0" instance=ExtResource( 2 )]
screen_path = NodePath("..")

[node name="screen_game_paused" parent="Screens" index="1" instance=ExtResource( 4 )]

[node name="transition_fade" parent="Screens/screen_game_paused" index="1" instance=ExtResource( 2 )]
screen_path = NodePath("..")

[node name="screen_empty" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 6 )
fsm_path = NodePath("..")

[node name="screen_game_paused" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 5 )
fsm_path = NodePath("..")

[node name="app_manager" type="Node" parent="." index="3"]
script = ExtResource( 9 )

[node name="time_manager" type="Node" parent="." index="4"]
script = ExtResource( 11 )

[connection signal="just_pressed" from="SystemController/sys_escape" to="StateMachine/screen_empty" method="_on_sys_escape_just_pressed"]
[connection signal="button_quit" from="Screens/screen_game_paused" to="app_manager" method="load_scene" binds= [ 1 ]]
[connection signal="button_resume" from="Screens/screen_game_paused" to="StateMachine" method="change_state_path" binds= [ "screen_empty" ]]
[connection signal="game_paused" from="StateMachine/screen_empty" to="StateMachine" method="change_state_path" binds= [ "screen_game_paused" ]]
[connection signal="state_entered" from="StateMachine/screen_empty" to="Screens/screen_empty" method="enter"]
[connection signal="state_entered" from="StateMachine/screen_empty" to="." method="emit_signal" binds= [ "game_resumed" ]]
[connection signal="state_entered" from="StateMachine/screen_empty" to="time_manager" method="resume_time"]
[connection signal="state_exited" from="StateMachine/screen_empty" to="Screens/screen_empty" method="exit"]
[connection signal="state_entered" from="StateMachine/screen_game_paused" to="Screens/screen_game_paused" method="enter"]
[connection signal="state_entered" from="StateMachine/screen_game_paused" to="." method="emit_signal" binds= [ "game_paused" ]]
[connection signal="state_entered" from="StateMachine/screen_game_paused" to="time_manager" method="pause_time"]
[connection signal="state_exited" from="StateMachine/screen_game_paused" to="Screens/screen_game_paused" method="exit"]
